exports[`any documents a basic any propType 1`] = `
Object {
  "description": "any",
  "options": Object {},
  "validate": Object {
    "type": "any",
  },
}
`;

exports[`any documents a deprecated any propType 1`] = `
Object {
  "description": "any",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "type": "any",
  },
}
`;

exports[`any documents a required any propType 1`] = `
Object {
  "description": "any",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "type": "any",
  },
}
`;

exports[`array documents a basic array propType 1`] = `
Object {
  "description": "array",
  "options": Object {},
  "validate": Object {
    "type": "array",
  },
}
`;

exports[`array documents a deprecated array propType 1`] = `
Object {
  "description": "array",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "type": "array",
  },
}
`;

exports[`array documents a required array propType 1`] = `
Object {
  "description": "array",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "type": "array",
  },
}
`;

exports[`arrayOf documents a basic arrayOf propType 1`] = `
Object {
  "description": "arrayOf",
  "options": Object {},
  "validate": Object {
    "args": Object {
      "type": "number",
    },
    "type": "arrayOf",
  },
}
`;

exports[`arrayOf documents a deprecated arrayOf propType 1`] = `
Object {
  "description": "arrayOf",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "args": Object {
      "type": "number",
    },
    "type": "arrayOf",
  },
}
`;

exports[`arrayOf documents a required arrayOf propType 1`] = `
Object {
  "description": "arrayOf",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "args": Object {
      "type": "number",
    },
    "type": "arrayOf",
  },
}
`;

exports[`bool documents a basic bool propType 1`] = `
Object {
  "description": "bool",
  "options": Object {},
  "validate": Object {
    "type": "bool",
  },
}
`;

exports[`bool documents a deprecated bool propType 1`] = `
Object {
  "description": "bool",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "type": "bool",
  },
}
`;

exports[`bool documents a required bool propType 1`] = `
Object {
  "description": "bool",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "type": "bool",
  },
}
`;

exports[`custom documents a basic custom propType 1`] = `
Object {
  "description": "custom",
  "options": Object {},
  "validate": [Function],
}
`;

exports[`custom documents a deprecated custom propType 1`] = `
Object {
  "description": "custom",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": [Function],
}
`;

exports[`custom documents a required custom propType 1`] = `
Object {
  "description": "custom",
  "options": Object {
    "required": true,
  },
  "validate": [Function],
}
`;

exports[`element documents a basic element propType 1`] = `
Object {
  "description": "element",
  "options": Object {},
  "validate": Object {
    "type": "element",
  },
}
`;

exports[`element documents a deprecated element propType 1`] = `
Object {
  "description": "element",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "type": "element",
  },
}
`;

exports[`element documents a required element propType 1`] = `
Object {
  "description": "element",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "type": "element",
  },
}
`;

exports[`func documents a basic func propType 1`] = `
Object {
  "description": "func",
  "options": Object {},
  "validate": Object {
    "type": "func",
  },
}
`;

exports[`func documents a deprecated func propType 1`] = `
Object {
  "description": "func",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "type": "func",
  },
}
`;

exports[`func documents a required func propType 1`] = `
Object {
  "description": "func",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "type": "func",
  },
}
`;

exports[`instanceOf documents a basic instanceOf propType 1`] = `
Object {
  "description": "instanceOf",
  "options": Object {},
  "validate": Object {
    "args": [Function],
    "type": "instanceOf",
  },
}
`;

exports[`instanceOf documents a deprecated instanceOf propType 1`] = `
Object {
  "description": "instanceOf",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "args": [Function],
    "type": "instanceOf",
  },
}
`;

exports[`instanceOf documents a required instanceOf propType 1`] = `
Object {
  "description": "instanceOf",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "args": [Function],
    "type": "instanceOf",
  },
}
`;

exports[`node documents a basic node propType 1`] = `
Object {
  "description": "node",
  "options": Object {},
  "validate": Object {
    "type": "node",
  },
}
`;

exports[`node documents a deprecated node propType 1`] = `
Object {
  "description": "node",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "type": "node",
  },
}
`;

exports[`node documents a required node propType 1`] = `
Object {
  "description": "node",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "type": "node",
  },
}
`;

exports[`number documents a basic number propType 1`] = `
Object {
  "description": "number",
  "options": Object {},
  "validate": Object {
    "type": "number",
  },
}
`;

exports[`number documents a deprecated number propType 1`] = `
Object {
  "description": "number",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "type": "number",
  },
}
`;

exports[`number documents a required number propType 1`] = `
Object {
  "description": "number",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "type": "number",
  },
}
`;

exports[`object documents a basic object propType 1`] = `
Object {
  "description": "object",
  "options": Object {},
  "validate": Object {
    "type": "object",
  },
}
`;

exports[`object documents a deprecated object propType 1`] = `
Object {
  "description": "object",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "type": "object",
  },
}
`;

exports[`object documents a required object propType 1`] = `
Object {
  "description": "object",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "type": "object",
  },
}
`;

exports[`objectOf documents a basic objectOf propType 1`] = `
Object {
  "description": "objectOf",
  "options": Object {},
  "validate": Object {
    "args": Object {
      "type": "number",
    },
    "type": "objectOf",
  },
}
`;

exports[`objectOf documents a deprecated objectOf propType 1`] = `
Object {
  "description": "objectOf",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "args": Object {
      "type": "number",
    },
    "type": "objectOf",
  },
}
`;

exports[`objectOf documents a required objectOf propType 1`] = `
Object {
  "description": "objectOf",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "args": Object {
      "type": "number",
    },
    "type": "objectOf",
  },
}
`;

exports[`oneOf documents a basic oneOf propType 1`] = `
Object {
  "description": "oneOf",
  "options": Object {},
  "validate": Object {
    "args": Array [
      "News",
      "Photos",
    ],
    "type": "oneOf",
  },
}
`;

exports[`oneOf documents a deprecated oneOf propType 1`] = `
Object {
  "description": "oneOf",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "args": Array [
      "News",
      "Photos",
    ],
    "type": "oneOf",
  },
}
`;

exports[`oneOf documents a required oneOf propType 1`] = `
Object {
  "description": "oneOf",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "args": Array [
      "News",
      "Photos",
    ],
    "type": "oneOf",
  },
}
`;

exports[`oneOfType documents a basic oneOfType propType 1`] = `
Object {
  "type": "string",
}
`;

exports[`oneOfType documents a basic oneOfType propType 2`] = `
Object {
  "type": "number",
}
`;

exports[`oneOfType documents a basic oneOfType propType 3`] = `
Object {
  "args": [Function],
  "type": "instanceOf",
}
`;

exports[`oneOfType documents a basic oneOfType propType 4`] = `[Function]`;

exports[`oneOfType documents a basic oneOfType propType 5`] = `
Object {
  "description": "oneOfType",
  "options": Object {},
  "validate": Object {
    "args": Array [
      Object {
        "type": "string",
      },
      Object {
        "type": "number",
      },
      Object {
        "args": [Function],
        "type": "instanceOf",
      },
      [Function],
    ],
    "type": "oneOfType",
  },
}
`;

exports[`oneOfType documents a deprecated oneOfType propType 1`] = `
Object {
  "description": "oneOfType",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "args": Array [
      Object {
        "type": "string",
      },
      Object {
        "type": "number",
      },
      Object {
        "args": [Function],
        "type": "instanceOf",
      },
      [Function],
    ],
    "type": "oneOfType",
  },
}
`;

exports[`oneOfType documents a required oneOfType propType 1`] = `
Object {
  "description": "oneOfType",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "args": Array [
      Object {
        "type": "string",
      },
      Object {
        "type": "number",
      },
      Object {
        "args": [Function],
        "type": "instanceOf",
      },
      [Function],
    ],
    "type": "oneOfType",
  },
}
`;

exports[`shape documents a basic shape propType 1`] = `
Object {
  "description": "shape",
  "options": Object {},
  "validate": Object {
    "args": Object {
      "color": Object {
        "type": "string",
      },
      "fontSize": Object {
        "type": "number",
      },
      "one": Object {
        "args": Array [
          Object {
            "type": "string",
          },
          Object {
            "type": "number",
          },
          Object {
            "args": [Function],
            "type": "instanceOf",
          },
          [Function],
        ],
        "type": "oneOfType",
      },
      "test": Object {
        "args": [Function],
        "type": "instanceOf",
      },
      "test2": Object {
        "args": Object {
          "test3": Object {
            "type": "string",
          },
          "test4": Object {
            "args": Object {
              "test5": Object {
                "type": "string",
              },
              "test6": Object {
                "type": "number",
              },
              "test7": [Function],
              "test8": Object {
                "args": Object {
                  "type": "string",
                },
                "type": "arrayOf",
              },
            },
            "type": "shape",
          },
        },
        "type": "shape",
      },
    },
    "type": "shape",
  },
}
`;

exports[`shape documents a deprecated shape propType 1`] = `
Object {
  "description": "shape",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "args": Object {
      "color": Object {
        "type": "string",
      },
      "fontSize": Object {
        "type": "number",
      },
      "one": Object {
        "args": Array [
          Object {
            "type": "string",
          },
          Object {
            "type": "number",
          },
          Object {
            "args": [Function],
            "type": "instanceOf",
          },
          [Function],
        ],
        "type": "oneOfType",
      },
      "test": Object {
        "args": [Function],
        "type": "instanceOf",
      },
      "test2": Object {
        "args": Object {
          "test3": Object {
            "type": "string",
          },
          "test4": Object {
            "args": Object {
              "test5": Object {
                "type": "string",
              },
              "test6": Object {
                "type": "number",
              },
              "test7": [Function],
              "test8": Object {
                "args": Object {
                  "type": "string",
                },
                "type": "arrayOf",
              },
            },
            "type": "shape",
          },
        },
        "type": "shape",
      },
    },
    "type": "shape",
  },
}
`;

exports[`shape documents a required shape propType 1`] = `
Object {
  "description": "shape",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "args": Object {
      "color": Object {
        "type": "string",
      },
      "fontSize": Object {
        "type": "number",
      },
      "one": Object {
        "args": Array [
          Object {
            "type": "string",
          },
          Object {
            "type": "number",
          },
          Object {
            "args": [Function],
            "type": "instanceOf",
          },
          [Function],
        ],
        "type": "oneOfType",
      },
      "test": Object {
        "args": [Function],
        "type": "instanceOf",
      },
      "test2": Object {
        "args": Object {
          "test3": Object {
            "type": "string",
          },
          "test4": Object {
            "args": Object {
              "test5": Object {
                "type": "string",
              },
              "test6": Object {
                "type": "number",
              },
              "test7": [Function],
              "test8": Object {
                "args": Object {
                  "type": "string",
                },
                "type": "arrayOf",
              },
            },
            "type": "shape",
          },
        },
        "type": "shape",
      },
    },
    "type": "shape",
  },
}
`;

exports[`string documents a basic string propType 1`] = `
Object {
  "description": "string",
  "options": Object {},
  "validate": Object {
    "type": "string",
  },
}
`;

exports[`string documents a deprecated string propType 1`] = `
Object {
  "description": "string",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "type": "string",
  },
}
`;

exports[`string documents a required string propType 1`] = `
Object {
  "description": "string",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "type": "string",
  },
}
`;

exports[`symbol documents a basic symbol propType 1`] = `
Object {
  "description": "symbol",
  "options": Object {},
  "validate": Object {
    "type": "symbol",
  },
}
`;

exports[`symbol documents a deprecated symbol propType 1`] = `
Object {
  "description": "symbol",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
  "validate": Object {
    "type": "symbol",
  },
}
`;

exports[`symbol documents a required symbol propType 1`] = `
Object {
  "description": "symbol",
  "options": Object {
    "required": true,
  },
  "validate": Object {
    "type": "symbol",
  },
}
`;
